fix closed height for jumpto on desktop

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -170,7 +170,7 @@
   }
 
   @media (min-width: $breakpoint-tablet) {
-    height: 80px;
+    height: fit-content;
     border-top-width: 1px;
     margin-top: auto;
 
@@ -178,6 +178,11 @@
       height: 100%;
       overflow-y: scroll;
     }
+
+    .toggle {
+      padding: 20px;
+    }
+
     ul {
       padding-bottom: var(--spacing-md);
       display: inline-block;
